# RAG

./: .env.example  .gitignore  AGENTS.md  AGENTS_WEB_UI.md  Analysis_Results.md  PRODUCT_VISION.md  README.md  WALKTHROUGH_REMEDIATION.md  alembic.ini  pyproject.toml
app/: __init__.py  config.py  constants.py  main.py  taxonomy.py
dental_chatbot_sample_data/: faqs.csv  image_manifest.json  products.csv  services.csv
eval_datasets/: README.md  dental_basic_eval.jsonl  dental_conversation_scenarios.json  dental_conversation_scenarios_v2.json  dental_retrieval_eval.jsonl  dental_semantic_groups.json
eval_results/: conversation_scenario_results.json  conversation_scenario_results_v2.json  conversation_scenario_results_v2_after_fixes.json  conversation_scenario_results_v2_query_rewrite.json  conversation_scenario_results_v2_query_rewrite_no_timeout.json
frontend/: .env.example  README_FRONTEND.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: audit_chatbot_completeness.py  backup_before_reset.py  preflight_phase1.py  run_conversation_scenarios.py  run_conversation_scenarios_v2.py  seed_evaluation_fixtures.py  smoke_asset_renderer_boundary.py  smoke_db_bootstrap.py  smoke_evaluation_metrics_offline.py  smoke_generation_context_guard.py  smoke_ingestion_db_write.py  smoke_ingestion_ner_boundary.py  smoke_memory_save_order.py  smoke_query_ner_offsets.py  smoke_retrieval_service_alias.py  smoke_task_planner_safe_unknown.py  smoke_trace_summary_eval_fields.py  verify_catalog_ingestion.py  verify_retrieval_pipeline.py
(+193 files in other folders)
