[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplydent-rag"
version = "0.1.0"
description = "Production-oriented multimodal RAG backend for a dental business"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langchain-text-splitters>=0.3,<1",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pgvector>=0.3,<1",
  "pillow>=10,<12",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "rapidfuzz>=3.10,<4",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
ingestion = [
  "docling>=2.20,<3",
  "openpyxl>=3.1,<4",
  "python-docx>=1.1,<2",
]
models = [
  "gliner>=0.2,<1",
  "sentence-transformers>=3.3,<6",
]
observability = [
  "langfuse>=2.57,<4",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: requires external PostgreSQL or Ollama services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
